# gigachat-test

./: .gitignore  README.md  RESEARCH_PLAN.md  TABLE.md  ai-sage--Giga-Embeddings-instruct--README.md  deep-research-report.md  diagnostic-tests.ipynb  main.py  pyproject.toml
experiments/: README.md  latent_attention_experiment_report.md  latent_attention_reinit_fair_experiment_report.md
official_repro/: FLASH_ATTENTION_SETUP.md  README.md  TERRA_PAIR_WRAPPER_FLOAT16_CHECK_RESULTS.md  TERRA_PAIR_WRAPPER_HYPOTHESIS_SEARCH_RESULTS.md  TERRA_PAIR_WRAPPER_LOGICAL_SEARCH_RESULTS.md  TERRA_PAIR_WRAPPER_OFFICIAL_SEARCH_RESULTS.md  TERRA_PAIR_WRAPPER_PROBE_RESULTS.md  TERRA_PAIR_WRAPPER_PROPOSITION_SEARCH_RESULTS.md  TERRA_PAIR_WRAPPER_TEXTFIELD_SEARCH_RESULTS.md  TERRA_REVISION_WRAPPER_ABLATION.md  TERRA_REVISION_WRAPPER_ABLATION_RESULTS.md  WRAPPER_FREEZE_NOTES.md  compare_official_rumteb.py  probe_terra_pair_wrapper.py  requirements.txt  run_official_rumteb.py  summarize_terra_pair_probe.py
scripts/: analyze_cedr_knn_failures.py  audit_brighter_cedr_contamination.py  audit_cedr_candidate_datasets.py  audit_ruizard_cedr_contamination.py  audit_sts22_contamination.py  average_latent_checkpoints.py  export_released_latent_checkpoint.py  extrapolate_latent_direction.py  giga_model_utils.py  inspect_giga_embedding_architecture.py  latent_direction_metrics.py  latent_experiment_modules.py  mix_jsonl_records.py  prepare_ainl_human_science_tfidf_clusters.py  prepare_balanced_labeled_batches.py  prepare_balanced_pairscore_batches.py  prepare_blinoff_restaurant_review_distill.py  (+166 more)
(+628 files in other folders)
